   messages and removing the unused -H option.

 * Fixed command line installer not picking up the custom image store path and
   not setting permissions on .htaccess files.

 * Fixed global settings help link.

 * Fixed non-working sorting in the websites list inventory screen.

 * Fixed avw.php logging an ad impression when requesting a non existing
   zone.


Non-Backwards Compatible Changes
--------------------------------

 * Revive Adserver now requires at least PHP 8.1

 * Deprecated [rawDatabase] section in the config file is no longer supported.

 * Deprecated SQL stored banners: the default setting for new installations is
   to disallow SQL stored banners.

 * Removed obsolete P3P headers and settings.

 * Removed local mode tags, previously deprecated in v5.3.0.

 * Removed XML-RPC tags, previously deprecated in v5.3.0.

 * Removed option to generate pop-unders, which are not allowed by modern
   browsers.

 * Deprecated popups and interstitials: it is no longer possible to create new
   popup or interstitial zones. Existing tags will continue to work as
   expected, until the functionality will be fully removed in a future version.

 * Removed the possibility to configure the Operation Interval setting from the
   user interface, effectively deprecating non-standard usages. In fact using
   anything different from 60 minutes is complex, confusing, and fraught with
   danger.

 * Removed the legacy "Client - Browser (Deprecated)" and "Client - Operating
   System (Deprecated)" delivery rules.

 * The "intl" PHP extension is now required in order to run Revive Adserver.


Community Contributions
------------------------

We would like to thank the following community members for their
contribution to this release:

 * zd-ls
 * lcuis
 * J0k3RTwelv3


System Requirements
-------------------

Before installing, please make sure your server meets the system
requirements, which can be found at:

https://www.revive-adserver.com/support/requirements/

